docs: update for expenses endpoints
