# src/controllers/expenses.controller.js
@@ -2,6 +2,8 @@ import { Op } from "sequelize";
 import db from "../models/index.js";
 import { deleteReceiptOnFail } from "../middleware/uploadReceipt.js";
 
+const isUUID = (id) => typeof id != 'string' || id.replaceAll('-', '').length !== 32
+
 const getAllExpenses = async (req, res) => {
     const userUUID = req.user.id
     try {
@@ -43,22 +45,18 @@ const getAllExpenses = async (req, res) => {
 
 const getSpecificExpense = async (req, res) => {
     const userUUID = req.user.id
-    const { id } = req.params
-
-    if (id.replaceAll('-', '').length !== 32) return res.status(400).json({ message: 'Invalid field', error: 'Incorrect expense ID' })
-
     try {
+        const { id } = req.params
+
+        if (isUUID(id)) return res.status(400).json({ message: 'Invalid field', error: 'Incorrect expense ID' })
+
 
         const queryAnswer = await db.Expense.findOne({
             where: { [Op.and]: { id: id, user_id: userUUID } },
             include: [{
                 association: 'category_fk',
                 attributes: ["name"]
-            }, {
-                association: 'user_fk',
-                attributes: ["email"]
-            }
-            ],
+            }],
         })
         return queryAnswer ? res.status(200).json(queryAnswer) : res.status(404).json({ message: 'No such expense' })
     } catch (err) {
@@ -68,27 +66,27 @@ const getSpecificExpense = async (req, res) => {
 
 
 const createExpense = async (req, res) => {
-    let { amount, expense_date, category_id, description, is_recurrent, start_date, end_date } = req.body
-
-    amount = parseInt(amount)
-    is_recurrent = is_recurrent.toLowerCase().includes("true")
-
-    if (!(amount && expense_date && category_id)) {
-        if (req.file) deleteReceiptOnFail(req.file.path)
-        return res.status(400).json({ message: 'Missing field', error: Object.keys(req.body).filter(field => !req.body[field]) })
-    }
-
-    if (!is_recurrent) {
-        start_date = null
-        end_date = null
-    }
-
-    if (is_recurrent && !start_date) {
-        if (req.file) deleteReceiptOnFail(req.file.path)
-        return res.status(400).json({ message: 'Invalid field', error: 'Recurrent expense must have a valid start date' })
-    }
-
     try {
+        let { amount, expense_date, category_id, description, is_recurrent, start_date, end_date } = req.body
+
+        amount = parseInt(amount)
+        is_recurrent = is_recurrent.toLowerCase().includes("true")
+
+        if (!(amount && expense_date && category_id)) {
+            if (req.file) deleteReceiptOnFail(req.file.path)
+            return res.status(400).json({ message: 'Missing field', error: Object.keys(req.body).filter(field => !req.body[field]) })
+        }
+
+        if (!is_recurrent) {
+            start_date = null
+            end_date = null
+        }
+
+        if (is_recurrent && !start_date) {
+            if (req.file) deleteReceiptOnFail(req.file.path)
+            return res.status(400).json({ message: 'Invalid field', error: 'Recurrent expense must have a valid start date' })
+        }
+
         const userUUID = req.user.id
 
         let receipt_id = null
@@ -100,7 +98,7 @@ const createExpense = async (req, res) => {
 
         const newExpense = db.Expense.create({ user_id: userUUID, amount, expense_date, category_id, description, is_recurrent, start_date, end_date, receipt_id })
 
-        return res.status(201).json({ message: 'Expense created', Expense: { user_id: userUUID, amount, expense_date, category_id, description, is_recurrent, start_date, end_date, receipt_id: receipt_id } })
+        return res.status(201).json(newExpense)
 
     } catch (err) {
         if (req.file) deleteReceiptOnFail(req.file.path)
@@ -109,48 +107,53 @@ const createExpense = async (req, res) => {
 }
 
 const updateExpense = async (req, res) => {
-    const userUUID = req.user.id
-    const { id } = req.params
+    try {
+        const userUUID = req.user.id
+        const { id } = req.params
 
-    if (id.replaceAll('-', '').length !== 32) return res.status(400).json({ message: 'Invalid field', error: 'Invalid expense ID' })
+        if (isUUID(id)) return res.status(400).json({ message: 'Invalid field', error: 'Invalid expense ID' })
 
-    const currentExpense = await db.Expense.findOne({ where: { [Op.and]: { id: id, user_id: userUUID } } });
-    if (!currentExpense) return res.status(404).json({ message: 'No match found' })
+        const currentExpense = await db.Expense.findOne({ where: { [Op.and]: { id: id, user_id: userUUID } } });
+        if (!currentExpense) return res.status(404).json({ message: 'No match found' })
 
-    if (currentExpense['is_recurring']) {
-        if (!currentExpense['start_date']) {
-            return res.status(400).json({ message: 'Invalid field', error: 'Reccuring expenses require a start date' })
+        if (currentExpense['is_recurring']) {
+            if (!currentExpense['start_date']) {
+                return res.status(400).json({ message: 'Invalid field', error: 'Reccuring expenses require a start date' })
+            }
         }
-    }
 
-    for (const field in currentExpense.toJSON()) {
-        if (field in req.body) {
-            currentExpense[field] = req.body[field]
+        for (const field in currentExpense.toJSON()) {
+            if (field in req.body) {
+                currentExpense[field] = req.body[field]
+            }
         }
-    }
 
-    if (req.file) {
-        const receipt_id = req.file.filename.split('.')[0]
-        if (currentExpense['receipt_id']) await db.Receipt.destroy({ where: { [Op.and]: { id: currentExpense['receipt_id'], user_id: userUUID } } })
-            .then(() => deleteReceiptOnFail(req.file.path))
-            .catch((rej) => res.status(500).json({ message: 'Failed to delete receipt', error: rej }))
-        db.Receipt.create({ id: receipt_id, file_path: req.file.path, user_id: userUUID })
-        currentExpense['receipt_id'] = receipt_id
-    }
+        if (req.file) {
+            const receipt_id = req.file.filename.split('.')[0]
+            if (currentExpense['receipt_id']) await db.Receipt.destroy({ where: { [Op.and]: { id: currentExpense['receipt_id'], user_id: userUUID } } })
+                .then(() => deleteReceiptOnFail(req.file.path))
+                .catch((rej) => res.status(500).json({ message: 'Failed to delete receipt', error: rej }))
+            db.Receipt.create({ id: receipt_id, file_path: req.file.path, user_id: userUUID })
+            currentExpense['receipt_id'] = receipt_id
+        }
 
-    currentExpense.save()
-        .then(() => res.status(200).json(currentExpense))
-        .catch(err => res.status(500).json({ message: 'Failed to apply changes', error: err }))
+        currentExpense.save()
+            .then(() => res.status(200).json(currentExpense))
+            .catch(err => res.status(500).json({ message: 'Failed to apply changes', error: err }))
+    } catch (err) {
+        return res.status(500).json({ message: 'Failed to update record', error: err.message })
+    }
 }
 
 const deleteExpense = async (req, res) => {
     const userUUID = req.user.id
-    const { id } = req.params;
-
-    if (id.replaceAll('-', '').length !== 32) return res.status(400).json('Invalid expense ID')
-
     try {
+        const { id } = req.params;
+
+        if (isUUID(id)) return res.status(400).json({ message: 'Invalid field', error: 'Invalid expense ID' })
+
         const deleteExpense = await db.Expense.findOne({ where: { [Op.and]: { id: id, user_id: userUUID } } })
+        if (!deleteExpense) { return res.status(404).json({ message: 'No expense with such ID' }) }
 
         if (deleteExpense['receipt_id']) await db.Receipt.findOne({ where: { [Op.and]: { id: deleteExpense['receipt_id'], user_id: userUUID } } })
             .then((res) => deleteReceiptOnFail(res['file_path']))
@@ -159,7 +162,7 @@ const deleteExpense = async (req, res) => {
 
         await deleteExpense.destroy().catch((rej) => res.status(500).json({ message: 'Failed to delete expense', error: rej }))
 
-        return (deleteExpense) ? res.status(200).json('Deletion successful') : res.status(404).json({ message: 'No expense with such ID' })
+        return res.status(204).json({ message: 'Deletion successful' })
     } catch (err) {
         return res.status(500).json({ message: 'Failed to delete the record', error: err.message })
     }
